[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.1"
tokio = { version = "1" , features = ["full"]}
# serialize or deserialize for protobuf
prost = "0.13.1"
# use reflection can transfer buff proto to client
tonic-reflection = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
